Fix overflow in hero code blocks (#2)

--- a/src/components/CodeBlock/index.module.css
+++ b/src/components/CodeBlock/index.module.css
@@ -14,7 +14,7 @@
 .pre {
   text-align: left;
   padding: 0.75em;
-  overflow: scroll;
+  overflow: auto;
   margin: 0;
 }
 
